fix: overflow-x truthtable

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,8 @@ form button:active {
     justify-content: center;
     letter-spacing: 3px;
     overflow-x: scroll;
+    width: 100%;
+    margin: 0px 5px;
 }
 
 table {
